# wgpu-wgsl-learner

./: Cargo.toml  README.md
shader/: ampamman.frag  ampamman.wgsl  cos.frag  cos.wgsl  cos2.frag  cos2.wgsl  cross.frag  cross.wgsl  default.frag  default.wgsl  functions.frag  functions.wgsl  glitter.frag  glitter.wgsl  glitter_time_evolution.frag  glitter_time_evolution.wgsl  gradation.frag  gradation.wgsl  gradation_y.frag  gradation_y.wgsl  green.frag  green.wgsl  light.frag  light.wgsl  light_circle.frag  light_circle.wgsl  light_many.frag  light_many.wgsl  light_many10.frag  light_many10.wgsl  light_move.frag  light_move.wgsl  light_time_evolution.frag  light_time_evolution.wgsl
src/: main.rs  shader.glsl
