[package]
name = "wgpu-wgsl-learner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
wgpu = { version = "0.12.0", features = ["glsl"]}
winit = "0.26.1"
tobj = "3.0"
rayon = "1.5.1"
naga = "0.8.3"

