[package]
name = "wgpu-wgsl-learner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev ="766c6cd", features = ["glsl"]}
winit = "0.26.1"
tobj = "3.0"
rayon = "1.5.1"
naga = {git = "https://github.com/gfx-rs/naga", rev = "81dc674" }

